Move plugin loading into core Error Prone
MOE_MIGRATED_REVID=125510378